<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                                   android:layout_height="match_parent">

    <TextView
            android:text="@string/question"
            android:layout_width="407dp"
            android:layout_height="138dp" android:id="@+id/question"
            android:textSize="20sp" tools:ignore="MissingConstraints"
            android:textAlignment="center" android:layout_marginTop="41dp"
            app:layout_constraintTop_toBottomOf="@+id/pts" android:layout_marginEnd="4dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="39dp" app:layout_constraintBottom_toTopOf="@+id/answer"/>
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="124dp" app:layout_constraintBottom_toTopOf="@+id/question"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent">

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:hint="@string/your_answer"
            android:textAlignment="center" android:layout_marginTop="48dp"
            app:layout_constraintTop_toBottomOf="@+id/question"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.0"
            android:id="@+id/answer"/>
    <TextView
            android:text="@string/pts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/pts"
            android:textSize="34sp" android:textColor="#201F1F"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="40dp" android:layout_marginEnd="160dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="7dp"
            app:layout_constraintStart_toEndOf="@+id/point"/>
    <TextView
            android:text="@string/_0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/point"
            android:textSize="34sp" android:textAlignment="center"
            android:textColor="#201F1F" app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="40dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="177dp"
            app:layout_constraintEnd_toStartOf="@+id/pts" android:layout_marginEnd="7dp"/>
    <Button
            android:text="@string/check"
            android:layout_width="187dp"
            android:layout_height="83dp" android:id="@+id/check"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/answer" android:layout_marginEnd="132dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="132dp" android:backgroundTint="#49BF59"/>
</androidx.constraintlayout.widget.ConstraintLayout>