<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                                   android:layout_height="match_parent">

    <TextView
            android:text="@string/enter_question_below"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textEntry"
            android:fontFamily="@font/aldrich" android:textSize="24sp"
            android:textAlignment="center" android:textColor="#000000" android:layout_marginEnd="73dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="73dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="48dp" app:layout_constraintHorizontal_bias="1.0"/>
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent">

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputEditText
            android:layout_width="409dp"
            android:layout_height="75dp"
            android:hint="@string/type_here"
            android:textAlignment="center" android:id="@+id/QuestInput" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textEntry" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="2dp"
            app:layout_constraintHorizontal_bias="1.0"/>
    <TextView
            android:text="@string/enter_its_answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/answerEntry"
            android:fontFamily="@font/aldrich" android:textSize="24sp"
            android:textAlignment="center" android:textColor="#000000" android:layout_marginEnd="102dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="101dp" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/QuestInput" app:layout_constraintHorizontal_bias="0.0"/>
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="99dp" app:layout_constraintBottom_toTopOf="@+id/textEntry">

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputEditText
            android:layout_width="409dp"
            android:layout_height="75dp"
            android:hint="@string/type"
            android:id="@+id/answerInput" android:textAlignment="center" android:layout_marginEnd="2dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/answerEntry"
            app:layout_constraintHorizontal_bias="1.0"/>
    <TextView
            android:text="@string/enter_its_points"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/pointEntry" android:textSize="24sp"
            android:fontFamily="@font/aldrich" android:textAlignment="center" android:textColor="#000000"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/answerInput" android:layout_marginEnd="102dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="114dp" app:layout_constraintHorizontal_bias="1.0"
            android:layout_marginBottom="22dp" app:layout_constraintBottom_toTopOf="@+id/pointInput"/>
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" tools:ignore="MissingConstraints">

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputEditText
            android:layout_width="409dp"
            android:layout_height="75dp"
            android:hint="@string/type_heree" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="2dp"
            android:layout_marginTop="23dp" app:layout_constraintTop_toBottomOf="@+id/pointEntry"
            android:textAlignment="center" android:id="@+id/pointInput"/>
    <Button
            android:text="@string/submit"
            android:layout_width="140dp"
            android:layout_height="64dp" android:id="@+id/submit"
            android:layout_marginEnd="136dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="135dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="163dp"
            android:layout_marginTop="36dp" app:layout_constraintTop_toBottomOf="@+id/pointInput"
            android:backgroundTint="#49BF59"/>
</androidx.constraintlayout.widget.ConstraintLayout>