<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                                   android:layout_height="match_parent">
    <TextView
            android:text="@string/your_final_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/Final"
            android:fontFamily="@font/aldrich" android:textStyle="bold"
            android:textSize="24sp" android:textColor="#000000"
            android:layout_marginEnd="105dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="105dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="616dp" app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="81dp"/>
    <TextView
            android:text="0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/totalScore"
            android:fontFamily="sans-serif-thin" android:textSize="48sp"
            android:textStyle="bold" android:textAlignment="center" android:layout_marginEnd="192dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="192dp" android:layout_marginBottom="37dp"
            app:layout_constraintBottom_toTopOf="@+id/category"/>
    <TextView
            android:text="@string/excellent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/category"
            android:textSize="24sp" android:fontFamily="@font/aldrich"
            android:textColor="#19D313" android:textAlignment="center" android:layout_marginEnd="149dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="150dp" android:layout_marginBottom="98dp"
            app:layout_constraintBottom_toTopOf="@+id/addQuest"/>
    <Button
            android:text="@string/exit"
            android:layout_width="100dp"
            android:layout_height="52dp" android:id="@+id/exit"
            android:layout_marginEnd="162dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="162dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="207dp"
            android:backgroundTint="#49BF59"/>
    <Button
            android:text="@string/add_question_for_future_player"
            android:layout_width="314dp"
            android:layout_height="72dp" android:id="@+id/addQuest"
            android:layout_marginEnd="52dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="52dp"
            android:layout_marginBottom="36dp" app:layout_constraintBottom_toTopOf="@+id/exit"
            app:layout_constraintHorizontal_bias="0.571" android:backgroundTint="#49BF59"/>
</androidx.constraintlayout.widget.ConstraintLayout>