<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/the_science_book"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:id="@+id/scienceBook" android:textStyle="bold"
            android:fontFamily="@font/aldrich" android:textSize="48sp" android:textAlignment="center"
            android:textColor="#285A6A" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.416"/>
    <TextView
            android:text="@string/welcome_to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/welcome"
            android:textAlignment="center" android:fontFamily="@font/beth_ellen"
            android:textSize="16sp" tools:ignore="MissingConstraints" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="221dp" android:layout_marginEnd="159dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="158dp" app:layout_constraintBottom_toTopOf="@+id/scienceBook"/>
    <Button
            android:text="@string/start"
            android:layout_width="156dp"
            android:layout_height="65dp" android:id="@+id/start"
            android:fontFamily="@font/aldrich" android:textSize="20sp"
            android:textStyle="bold" android:textAlignment="center" tools:ignore="MissingConstraints"
            android:layout_marginEnd="128dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="127dp"
            android:layout_marginTop="79dp" app:layout_constraintTop_toBottomOf="@+id/scienceBook"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="216dp"
            android:backgroundTint="#49BF59" android:textColor="#FFFFFF"/>

</androidx.constraintlayout.widget.ConstraintLayout>